emily bday message

--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
 						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="fourth">
 							<div class="content">
 								<h2>Some birthday wishes from ur homies</h2>
-								<p></p>
+								<p>Dear Derek-- Happy happy birthday! You bring so much joy and light to everyone around you. I pray God's blessings upon you in your next year of life and the years to come. Merry Christmas too, and I hope you have a restful winter break. In Christ, Emily Y.</p>
+								<p> </p>
+								<p> </p>
+								<p> </p>
+								<p> </p>
+								<p> </p>
 								<ul class="actions stacked">
 									<li><a href="#fifth" class="button big wide smooth-scroll-middle">......</a></li>
 								</ul>
