--- a/index.html
+++ b/index.html
@@ -78,17 +78,44 @@
 							<div class="content">
 								<h2>Some birthday wishes from ur homies</h2>
 								<p>Dear Derek-- Happy happy birthday! You bring so much joy and light to everyone around you. I pray God's blessings upon you in your next year of life and the years to come. Merry Christmas too, and I hope you have a restful winter break. In Christ, Emily Y.</p>
-								<p> </p>
-								<p> </p>
-								<p> </p>
-								<p> </p>
-								<p> </p>
+								<p>Derek, thanks for being a great brother. Our time together with Patrick was a really great blessing to me. -Sam Rick</p>
 								<ul class="actions stacked">
-									<li><a href="#fifth" class="button big wide smooth-scroll-middle">......</a></li>
+									<li><a href="#fifth" class="button big wide smooth-scroll-middle">-></a></li>
 								</ul>
 							</div>
 							<div class="image">
 								<img src="images/Derek5a.jpg" alt="" />
+							</div>
+						</section>
+
+					<!-- Six -->
+						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="fifth">
+							<div class="content">
+								<h2>More bday wishes</h2>
+								<p>Happy birthday Derek! Hope you have a restful winter break :)) - Haneul</p>
+								<p>One great man once said to another great man— “‘Sit at my right hand until I make your enemies a footstool for your feet’”. While I’m certainly not a King David and you are certainly not the readers of the Bible, a lot can be said about the parallels of our relationship (and arguably friendship) with each other. On this most precious holiday of the dearest December, I wish you the sweetest of days as we reflect upon the birth of one man who gave up his life for his friends, in many ways, and made his home in hearts of those who dwell in Spelman 52 this year. - Sunny ("it's purposely nonsensical" hehe hope it makes sense :P)</p>
+								<ul class="actions stacked">
+									<li><a href="#sixth" class="button big wide smooth-scroll-middle">--></a></li>
+								</ul>
+
+							</div>
+							<div class="image">
+								<img src="images/Derek6.jpg" alt="" />
+							</div>
+						</section>
+
+					<!-- Seven -->
+						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="sixth">
+							<div class="content">
+								<h2>And more...</h2>
+								<p> </p>
+								<p> </p>
+								<ul class="actions stacked">
+									<li><a href="#footer" class="button big wide smooth-scroll-middle">---></a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/Derek7.jpg" alt="" />
 							</div>
 						</section>
 
