--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<div class="content">
 								<h2>And more...</h2>
 								<p> </p>
-								<p> </p>
+								<p>Hi - Pastor Stephen from Hope </p>
 								<ul class="actions stacked">
 									<li><a href="#footer" class="button big wide smooth-scroll-middle">---></a></li>
 								</ul>
