--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 								<h2>More bday wishes</h2>
 								<p>Happy birthday Derek! Hope you have a restful winter break :)) - Haneul</p>
 								<p>One great man once said to another great man— “‘Sit at my right hand until I make your enemies a footstool for your feet’”. While I’m certainly not a King David and you are certainly not the readers of the Bible, a lot can be said about the parallels of our relationship (and arguably friendship) with each other. On this most precious holiday of the dearest December, I wish you the sweetest of days as we reflect upon the birth of one man who gave up his life for his friends, in many ways, and made his home in hearts of those who dwell in Spelman 52 this year. - Sunny ("it's purposely nonsensical" hehe hope it makes sense :P)</p>
+								<p>hpdb twin - Dori</p>
 								<ul class="actions stacked">
 									<li><a href="#sixth" class="button big wide smooth-scroll-middle">--></a></li>
 								</ul>
@@ -108,7 +109,8 @@
 						<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="sixth">
 							<div class="content">
 								<h2>And more...</h2>
-								<p> </p>
+								<p>Derek, it’s been a crazy past year from wrapping up our time at the Mews to journeying to Joshua Tree and now trying to discern where God will take us after graduation. I am blessed to be able to call you a brother and a companion in the race of faith. Thank you for the times that you have encouraged me this past year. May God richly bless you and grow you in greater love for Him and for neighbor, and I look forward to what He will do in your life this next year! - Patrick  </p>
+								<p>hey Derek, when you left early from spel 52, it was quite a sad time of weeping, mourning, and sackcloth. But we ate your food in remembrance of you. Love , joe</p>
 								<p>Hi - Pastor Stephen from Hope </p>
 								<ul class="actions stacked">
 									<li><a href="#footer" class="button big wide smooth-scroll-middle">---></a></li>
